--- a/DeficitFiller.ipynb
+++ b/DeficitFiller.ipynb
@@ -10,6 +10,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Loading existing manifest structure...\n",
+      "❌ No existing manifest found. Please ensure master_manifest.csv exists.\n",
+      "\n",
       "Loading and filtering metadata...\n",
       "✅ Found 825 valid noise files.\n",
       "\n",
@@ -18,20 +21,20 @@
      ]
     },
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 385/385 [00:00<00:00, 557.77it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+     "ename": "NameError",
+     "evalue": "name 'existing_manifest' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)\n",
+      "Cell \u001b[1;32mIn[1], line 76\u001b[0m\n",
+      "\u001b[0;32m     73\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m📂 Copying from: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mNOISE_SOURCE_FOLDER\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[0;32m     75\u001b[0m \u001b[38;5;66;03m# Calculate next group_id to avoid conflicts\u001b[39;00m\n",
+      "\u001b[1;32m---> 76\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(\u001b[43mexisting_manifest\u001b[49m) \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m0\u001b[39m \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mgroup_id\u001b[39m\u001b[38;5;124m'\u001b[39m \u001b[38;5;129;01min\u001b[39;00m existing_manifest\u001b[38;5;241m.\u001b[39mcolumns:\n",
+      "\u001b[0;32m     77\u001b[0m     next_group_id \u001b[38;5;241m=\u001b[39m existing_manifest[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mgroup_id\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mmax() \u001b[38;5;241m+\u001b[39m \u001b[38;5;241m1\u001b[39m\n",
+      "\u001b[0;32m     78\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n",
       "\n",
-      "✨ Finished! Copied 385 noise files.\n",
-      "Updating master_manifest.csv...\n",
-      "✅ Master manifest updated successfully.\n"
+      "\u001b[1;31mNameError\u001b[0m: name 'existing_manifest' is not defined"
      ]
     }
    ],
@@ -51,7 +54,7 @@
     "METADATA_PATH = r\"D:/_3rd Year Class/1st Sem/Machine Learning/_ForLE/For DataSet/Metadata V1.0 FSC22.csv\"\n",
     "\n",
     "# 3. Your EXISTING output folder (Destination)\n",
-    "EXISTING_OUTPUT_FOLDER = r\"D:/_3rd Year Class/1st Sem/Machine Learning/_ForLE/For DataSet/3_SegmentedAudios/master_manifest_NoEagle.csv\"\n",
+    "EXISTING_OUTPUT_FOLDER = r\"D:/_3rd Year Class/1st Sem/Machine Learning/_ForLE/For DataSet/3_SegmentedAudios/NoEagleSound\"\n",
     "\n",
     "# 4. How many files do you need?\n",
     "TARGET_DEFICIT = 385 \n",
