fix: changed all needed paths, changed code to fix initalization bug.

--- a/DeficitFiller.ipynb
+++ b/DeficitFiller.ipynb
@@ -11,30 +11,17 @@
      "output_type": "stream",
      "text": [
       "Loading existing manifest structure...\n",
-      "❌ No existing manifest found. Please ensure master_manifest.csv exists.\n",
-      "\n",
-      "Loading and filtering metadata...\n",
-      "✅ Found 825 valid noise files.\n",
-      "\n",
-      "📉 Target to fill: 385 files\n",
-      "📂 Copying from: D:/_3rd Year Class/1st Sem/Machine Learning/_ForLE/For DataSet/Audio Wise V1.0\n"
+      "❌ No existing manifest found. Please ensure master_manifest.csv exists.\n"
      ]
     },
     {
-     "ename": "NameError",
-     "evalue": "name 'existing_manifest' is not defined",
+     "ename": "SystemExit",
+     "evalue": "1",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)\n",
-      "Cell \u001b[1;32mIn[1], line 76\u001b[0m\n",
-      "\u001b[0;32m     73\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m📂 Copying from: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mNOISE_SOURCE_FOLDER\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n",
-      "\u001b[0;32m     75\u001b[0m \u001b[38;5;66;03m# Calculate next group_id to avoid conflicts\u001b[39;00m\n",
-      "\u001b[1;32m---> 76\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(\u001b[43mexisting_manifest\u001b[49m) \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m0\u001b[39m \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mgroup_id\u001b[39m\u001b[38;5;124m'\u001b[39m \u001b[38;5;129;01min\u001b[39;00m existing_manifest\u001b[38;5;241m.\u001b[39mcolumns:\n",
-      "\u001b[0;32m     77\u001b[0m     next_group_id \u001b[38;5;241m=\u001b[39m existing_manifest[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mgroup_id\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mmax() \u001b[38;5;241m+\u001b[39m \u001b[38;5;241m1\u001b[39m\n",
-      "\u001b[0;32m     78\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n",
+      "An exception has occurred, use %tb to see the full traceback.\n",
       "\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'existing_manifest' is not defined"
+      "\u001b[1;31mSystemExit\u001b[0m\u001b[1;31m:\u001b[0m 1\n"
      ]
     }
    ],
@@ -43,6 +30,7 @@
     "import shutil\n",
     "import pandas as pd\n",
     "from tqdm import tqdm\n",
+    "import sys\n",
     "\n",
     "# ===============================\n",
     "# USER SETTINGS\n",
@@ -54,7 +42,7 @@
     "METADATA_PATH = r\"D:/_3rd Year Class/1st Sem/Machine Learning/_ForLE/For DataSet/Metadata V1.0 FSC22.csv\"\n",
     "\n",
     "# 3. Your EXISTING output folder (Destination)\n",
-    "EXISTING_OUTPUT_FOLDER = r\"D:/_3rd Year Class/1st Sem/Machine Learning/_ForLE/For DataSet/3_SegmentedAudios/NoEagleSound\"\n",
+    "EXISTING_OUTPUT_FOLDER = r\"D:/_3rd Year Class/1st Sem/Machine Learning/_ForLE/For DataSet/3_SegmentedAudios\"\n",
     "\n",
     "# 4. How many files do you need?\n",
     "TARGET_DEFICIT = 385 \n",
@@ -69,21 +57,21 @@
     "# ===============================\n",
     "# STEP 1: LOAD EXISTING MANIFEST\n",
     "# ===============================\n",
-    "manifest_path = os.path.join(EXISTING_OUTPUT_FOLDER, \"master_manifest.csv\")\n",
+    "manifest_path = os.path.join(EXISTING_OUTPUT_FOLDER, \"master_manifest_NoEagle.csv\")\n",
     "\n",
     "print(\"Loading existing manifest structure...\")\n",
+    "\n",
+    "if not os.path.exists(manifest_path):\n",
+    "    print(\"❌ No existing manifest found. Please ensure master_manifest.csv exists.\")\n",
+    "    sys.exit(1)\n",
+    "\n",
     "try:\n",
-    "    if os.path.exists(manifest_path):\n",
-    "        existing_manifest = pd.read_csv(manifest_path)\n",
-    "        # Get all column names from existing manifest\n",
-    "        manifest_columns = existing_manifest.columns.tolist()\n",
-    "        print(f\"✅ Found existing manifest with {len(manifest_columns)} columns\")\n",
-    "    else:\n",
-    "        print(\"❌ No existing manifest found. Please ensure master_manifest.csv exists.\")\n",
-    "        exit()\n",
+    "    existing_manifest = pd.read_csv(manifest_path)\n",
+    "    manifest_columns = existing_manifest.columns.tolist()\n",
+    "    print(f\"✅ Found existing manifest with {len(manifest_columns)} columns\")\n",
     "except Exception as e:\n",
     "    print(f\"❌ Error reading existing manifest: {e}\")\n",
-    "    exit()\n",
+    "    sys.exit(1)\n",
     "\n",
     "# ===============================\n",
     "# STEP 2: LOAD & FILTER METADATA\n",
@@ -102,22 +90,30 @@
     "    \n",
     "except Exception as e:\n",
     "    print(f\"❌ Error reading metadata: {e}\")\n",
-    "    exit()\n",
+    "    sys.exit(1)\n",
     "\n",
     "# ===============================\n",
-    "# STEP 3: COPY FILES\n",
+    "# STEP 3: PREPARE FOR COPYING\n",
+    "# ===============================\n",
+    "# Calculate next group_id to avoid conflicts\n",
+    "if len(existing_manifest) > 0 and 'group_id' in manifest_columns:\n",
+    "    try:\n",
+    "        next_group_id = int(existing_manifest['group_id'].max()) + 1\n",
+    "    except:\n",
+    "        next_group_id = 10000\n",
+    "else:\n",
+    "    next_group_id = 10000\n",
+    "\n",
+    "print(f\"Starting group_id from: {next_group_id}\")\n",
+    "\n",
+    "# ===============================\n",
+    "# STEP 4: COPY FILES\n",
     "# ===============================\n",
     "created_count = 0\n",
     "segments_data = []\n",
     "\n",
     "print(f\"\\n📉 Target to fill: {TARGET_DEFICIT} files\")\n",
     "print(f\"📂 Copying from: {NOISE_SOURCE_FOLDER}\")\n",
-    "\n",
-    "# Calculate next group_id to avoid conflicts\n",
-    "if len(existing_manifest) > 0 and 'group_id' in existing_manifest.columns:\n",
-    "    next_group_id = existing_manifest['group_id'].max() + 1\n",
-    "else:\n",
-    "    next_group_id = 10000\n",
     "\n",
     "# Iterate through the filtered list\n",
     "for index, row in tqdm(filtered_df.iterrows(), total=min(len(filtered_df), TARGET_DEFICIT)):\n",
@@ -161,8 +157,8 @@
     "            'segment_filename': new_filename,\n",
     "            'output_folder': os.path.join(location, label),\n",
     "            'source_audio': original_filename,\n",
-    "            'start': '',  # Leave blank for external noise files\n",
-    "            'end': '',    # Leave blank for external noise files\n",
+    "            'start': '',\n",
+    "            'end': '',\n",
     "            'quality': '',\n",
     "            'selection_numbers': '',\n",
     "        }\n",
@@ -184,7 +180,7 @@
     "print(f\"\\n✨ Finished! Copied {created_count} noise files.\")\n",
     "\n",
     "# ===============================\n",
-    "# STEP 4: UPDATE MASTER MANIFEST\n",
+    "# STEP 5: UPDATE MASTER MANIFEST\n",
     "# ===============================\n",
     "if segments_data:\n",
     "    print(\"\\nUpdating master_manifest.csv...\")\n",
