feat: added deficit filler for another data set.

--- a/DeficitFiller.ipynb
+++ b/DeficitFiller.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "id": "551b2162",
    "metadata": {},
    "outputs": [
@@ -14,10 +14,10 @@
       "✅ Found existing manifest with 12 columns\n",
       "\n",
       "Loading and filtering metadata...\n",
-      "✅ Found 825 valid noise files.\n",
+      "✅ Found 1125 valid noise files.\n",
       "Starting group_id from: 1813\n",
       "\n",
-      "📉 Target to fill: 385 files\n",
+      "📉 Target to fill: 2969 files\n",
       "📂 Copying from: D:/_3rd Year Class/1st Sem/Machine Learning/_ForLE/For DataSet/Audio Wise V1.0\n"
      ]
     },
@@ -25,7 +25,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 385/385 [00:01<00:00, 283.22it/s]\n"
+      "100%|██████████| 1125/1125 [00:01<00:00, 626.88it/s]"
      ]
     },
     {
@@ -33,10 +33,17 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "✨ Finished! Copied 385 noise files.\n",
+      "✨ Finished! Copied 1125 noise files.\n",
       "\n",
       "Updating master_manifest.csv...\n",
-      "✅ Master manifest updated successfully. Added 385 new rows.\n"
+      "✅ Master manifest updated successfully. Added 1125 new rows.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
@@ -60,13 +67,14 @@
     "EXISTING_OUTPUT_FOLDER = r\"D:/_3rd Year Class/1st Sem/Machine Learning/_ForLE/For DataSet/3_SegmentedAudios\"\n",
     "\n",
     "# 4. How many files do you need?\n",
-    "TARGET_DEFICIT = 385 \n",
+    "TARGET_DEFICIT = 2969\n",
     "\n",
     "# 5. The Allowed Classes\n",
     "ALLOWED_CLASSES = [\n",
     "    'Rain', 'Thunderstorm', 'WaterDrops', 'Wind', 'Silence', \n",
     "    'TreeFalling', 'Whistling', 'Insect', 'Frog', \n",
-    "    'BirdChirping', 'WingFlapping', 'Squirrel'\n",
+    "    'BirdChirping', 'WingFlapping', 'Squirrel', 'Footsteps', 'Clapping',\n",
+    "    'WolfHowl', 'Speaking'\n",
     "]\n",
     "\n",
     "# ===============================\n",
@@ -222,6 +230,173 @@
     "        print(\"   Saved new data to 'added_noise_manifest_backup.csv' instead.\")\n",
     "else:\n",
     "    print(\"\\n⚠️ No files were copied. Manifest not updated.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2d637270",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading metadata...\n",
+      "✅ Found 1440 unique source files.\n",
+      "📉 Target needed: 2229\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 65%|██████▍   | 1440/2229 [00:22<00:01, 568.55it/s]"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import librosa\n",
+    "import soundfile as sf\n",
+    "\n",
+    "# ===============================\n",
+    "# USER SETTINGS\n",
+    "# ===============================\n",
+    "NOISE_SOURCE_FOLDER = r\"D:/_3rd Year Class/1st Sem/Machine Learning/_ForLE/For DataSet/archive2/audio/audio\"\n",
+    "METADATA_PATH = r\"D:/_3rd Year Class/1st Sem/Machine Learning/_ForLE/For DataSet/archive2/esc50.csv\"\n",
+    "EXISTING_OUTPUT_FOLDER = r\"D:/_3rd Year Class/1st Sem/Machine Learning/_ForLE/For DataSet/3_SegmentedAudios\"\n",
+    "\n",
+    "TARGET_DEFICIT = 2229 # The goal\n",
+    "\n",
+    "ALLOWED_CLASSES = [\n",
+    "    'chirping_birds', 'thunderstorm', 'crow', 'door_wood_knock', 'pouring_water', \n",
+    "    'clapping', 'church_bells', 'water_drops', 'wind', 'sheep', 'frog', \n",
+    "    'fireworks', 'cow', 'crackling_fire', 'hen', 'insects', 'hand_saw', \n",
+    "    'pig', 'rooster', 'sea_waves', 'dog', 'breathing', 'siren', 'snoring', \n",
+    "    'airplane', 'cat', 'door_wood_creaking', 'crickets', 'coughing', \n",
+    "    'chainsaw', 'drinking_sipping', 'laughing', 'glass_breaking', \n",
+    "    'engine', 'footsteps', 'crying_baby', 'can_opening'\n",
+    "]\n",
+    "\n",
+    "# ===============================\n",
+    "# STEP 1: LOAD MANIFESTS\n",
+    "# ===============================\n",
+    "manifest_path = os.path.join(EXISTING_OUTPUT_FOLDER, \"master_manifest_NoEagle.csv\")\n",
+    "if not os.path.exists(manifest_path):\n",
+    "    print(\"❌ No existing manifest found.\")\n",
+    "    sys.exit(1)\n",
+    "\n",
+    "existing_manifest = pd.read_csv(manifest_path)\n",
+    "manifest_columns = existing_manifest.columns.tolist()\n",
+    "\n",
+    "# Determine next group ID\n",
+    "if 'group_id' in existing_manifest.columns and not existing_manifest.empty:\n",
+    "    next_group_id = int(existing_manifest['group_id'].max()) + 1\n",
+    "else:\n",
+    "    next_group_id = 10000\n",
+    "\n",
+    "# ===============================\n",
+    "# STEP 2: PREPARE SOURCE LIST\n",
+    "# ===============================\n",
+    "print(\"Loading metadata...\")\n",
+    "meta_df = pd.read_csv(METADATA_PATH)\n",
+    "filtered_df = meta_df[meta_df['category'].isin(ALLOWED_CLASSES)].copy()\n",
+    "# Shuffle once\n",
+    "filtered_df = filtered_df.sample(frac=1, random_state=42).reset_index(drop=True)\n",
+    "\n",
+    "print(f\"✅ Found {len(filtered_df)} unique source files.\")\n",
+    "print(f\"📉 Target needed: {TARGET_DEFICIT}\")\n",
+    "\n",
+    "# ===============================\n",
+    "# STEP 3: FILL LOOP (COPY -> AUGMENT)\n",
+    "# ===============================\n",
+    "created_count = 0\n",
+    "segments_data = []\n",
+    "source_index = 0\n",
+    "total_sources = len(filtered_df)\n",
+    "\n",
+    "pbar = tqdm(total=TARGET_DEFICIT)\n",
+    "\n",
+    "while created_count < TARGET_DEFICIT:\n",
+    "    # Cycle through the list repeatedly if needed\n",
+    "    row = filtered_df.iloc[source_index % total_sources]\n",
+    "    source_index += 1\n",
+    "    \n",
+    "    orig_filename = str(row['filename']).strip()\n",
+    "    noise_class = str(row['category']).strip()\n",
+    "    source_path = os.path.join(NOISE_SOURCE_FOLDER, orig_filename)\n",
+    "    \n",
+    "    if not os.path.exists(source_path): continue\n",
+    "\n",
+    "    # Determine: Copy (Round 1) or Augment (Round 2+)?\n",
+    "    is_augmentation = (source_index > total_sources)\n",
+    "    \n",
+    "    # Destination Setup\n",
+    "    location = \"GeneralForest\"\n",
+    "    label = \"NoEagleSound\"\n",
+    "    save_folder = os.path.join(EXISTING_OUTPUT_FOLDER, location, label)\n",
+    "    os.makedirs(save_folder, exist_ok=True)\n",
+    "    \n",
+    "    try:\n",
+    "        if not is_augmentation:\n",
+    "            # --- METHOD A: DIRECT COPY (Fast) ---\n",
+    "            new_filename = f\"GeneralForest_{noise_class}_{orig_filename}\"\n",
+    "            dest_path = os.path.join(save_folder, new_filename)\n",
+    "            shutil.copy2(source_path, dest_path)\n",
+    "            \n",
+    "        else:\n",
+    "            # --- METHOD B: AUGMENTATION (Fill the rest) ---\n",
+    "            # Load\n",
+    "            y, sr = librosa.load(source_path, sr=None)\n",
+    "            \n",
+    "            # Augment: Pitch Shift (Randomly slightly higher or lower)\n",
+    "            steps = np.random.uniform(-1.5, 1.5)\n",
+    "            y_aug = librosa.effects.pitch_shift(y, sr=sr, n_steps=steps)\n",
+    "            \n",
+    "            # Save as new file\n",
+    "            new_filename = f\"GeneralForest_{noise_class}_aug{source_index}_{orig_filename}\"\n",
+    "            dest_path = os.path.join(save_folder, new_filename)\n",
+    "            sf.write(dest_path, y_aug, sr)\n",
+    "\n",
+    "        # Add to Manifest Data\n",
+    "        new_row = {col: '' for col in manifest_columns} # Init empty\n",
+    "        new_row.update({\n",
+    "            'label': label,\n",
+    "            'label_base': label,\n",
+    "            'label_full': label,\n",
+    "            'group_id': next_group_id + created_count,\n",
+    "            'location_id': location,\n",
+    "            'segment_filename': new_filename,\n",
+    "            'output_folder': os.path.join(location, label),\n",
+    "            'source_audio': orig_filename,\n",
+    "            'start': 0.0,\n",
+    "            'end': 5.0,\n",
+    "            'quality': 'N/A',\n",
+    "            'selection_numbers': 'None'\n",
+    "        })\n",
+    "        \n",
+    "        segments_data.append(new_row)\n",
+    "        created_count += 1\n",
+    "        pbar.update(1)\n",
+    "\n",
+    "    except Exception as e:\n",
+    "        # print(f\"Error: {e}\")\n",
+    "        pass\n",
+    "\n",
+    "pbar.close()\n",
+    "print(f\"\\n✨ DONE! Created {created_count} files ({len(filtered_df)} originals + {created_count - len(filtered_df)} augmented).\")\n",
+    "\n",
+    "# ===============================\n",
+    "# STEP 4: SAVE MANIFEST\n",
+    "# ===============================\n",
+    "if segments_data:\n",
+    "    print(\"Updating manifest...\")\n",
+    "    new_df = pd.DataFrame(segments_data)\n",
+    "    new_df = new_df[manifest_columns] # Align columns\n",
+    "    combined = pd.concat([existing_manifest, new_df], ignore_index=True)\n",
+    "    combined.to_csv(manifest_path, index=False)\n",
+    "    print(\"✅ Manifest updated.\")"
    ]
   }
  ],
