fix: added proper imports.

--- a/DeficitFiller.ipynb
+++ b/DeficitFiller.ipynb
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "2d637270",
    "metadata": {},
    "outputs": [
@@ -251,11 +251,33 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 65%|██████▍   | 1440/2229 [00:22<00:01, 568.55it/s]"
+      "100%|██████████| 2229/2229 [00:49<00:00, 44.95it/s] "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "✨ DONE! Created 2229 files (1440 originals + 789 augmented).\n",
+      "Updating manifest...\n",
+      "✅ Manifest updated.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
    "source": [
+    "import os\n",
+    "import shutil\n",
+    "import pandas as pd\n",
+    "from tqdm import tqdm\n",
+    "import sys\n",
     "import numpy as np\n",
     "import librosa\n",
     "import soundfile as sf\n",
