feat: cleaned comments.

--- a/SegmentationCode.ipynb
+++ b/SegmentationCode.ipynb
@@ -62,19 +62,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "43ae7f9b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# NEW: Path to your metadata spreadsheet\n",
+    "# Path metadata spreadsheet\n",
     "METADATA_PATH = r\"D:/_3rd Year Class/1st Sem/Machine Learning/_ForLE/Spreadsheets/ML__2025-10-12T15-06_grpeag1_audio.csv\"\n",
     "\n",
     "SEGMENT_LENGTH = 5  # seconds\n",
     "COL_TYPE = \"Type\"\n",
     "COL_QUALITY = \"Quality\"\n",
     "\n",
-    "# HYBRID APPROACH SETTINGS\n",
+    "# SETTINGS\n",
     "WINDOW_POSITION = \"center\" \n",
     "MIN_ANNOTATION_GAP = 1.0 \n",
     "OVERLAP_THRESHOLD = 0.8"
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "508a3b96",
    "metadata": {},
    "outputs": [
@@ -4191,7 +4191,7 @@
     "        print(f\"📋 Manifest saved: {manifest_filename}\")\n",
     "\n",
     "    # ==========================================\n",
-    "    # ⏸️ PAUSE FOR REVIEW (NEW FEATURE)\n",
+    "    # ⏸️ PAUSE FOR REVIEW\n",
     "    # ==========================================\n",
     "    print(f\"\\n\" + \"-\"*40)\n",
     "    print(f\"FINISHED PROCESSING: {audio_file}\")\n",
@@ -4216,7 +4216,7 @@
     "    print(\"=\"*60)\n",
     "    \n",
     "    # ==========================================\n",
-    "    # NEW: SEPARATE EAGLE AND NO-EAGLE MANIFESTS\n",
+    "    # SEPARATE EAGLE AND NO-EAGLE MANIFESTS\n",
     "    # ==========================================\n",
     "    \n",
     "    # Separate Eagle segments (all types)\n",
